# pyClimAir

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.rst  modules.rst  plotting.rst  pyclim.rst  usage.rst  whats_new
docs/_build/doctrees/: environment.pickle  installation.doctree
docs/_build/html/: genindex.html  index.html  installation.html  search.html  searchindex.js
examples/: example_script_pyclimair.py
pyclimair/: __init__.py
pyclimair.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyclimair/air/: __init__.py  air.py
pyclimair/clim/: __init__.py  clim.py
pyclimair/common/: __init__.py  common.py
pyclimair/data/HadCRUT.5.1.0.0/: HadCRUT.5.1.0.0.analysis.summary_series.global.annual.csv
pyclimair/pyclimair.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyclimair/pyclimair/common/: __init__.py
pyclimair/pyclimair/utils/: __init__.py
pyclimair/utils/: __init__.py  utils.py
src/: __init__.py
src/common/: _common.py
src/pyClimAir/: __init__.py  pyclimair.py
src/pyClimAir/air/: __init__.py  _air.py
src/pyClimAir/clim/: __init__.py  _clim.py
src/pyClimAir/common/: __init__.py  _common.py
src/pyClimAir/utils/: _utils.py
src/pyclimair.egg-info/: PKG-INFO  SOURCES.txt
tests/: tests.py
