[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["clim", "air", "common", "utils"]

[project]
authors = [
  {name = "Alejandro Rodri­guez Sanchez", email = "ars.rodriguezs@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  'pandas',
  'seaborn',
  'numpy',
  'matplotlib',
  'scipy',
  'pre-commit',
  'scikit-learn'
]
description = "A Python package that makes analysing climatological and/or air quality data easy, and pretty!"
keywords = ["climate", "air quality", "timeseries", "plotting"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
maintainers = [
  {name = "Alejandro Rodri­guez Sanchez", email = "ars.rodriguezs@gmail.com"}
]
name = "pyclimair"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.2"

[project.urls]
Homepage = "https://https://github.com/alexrsanchez/pyClim"
Issues = "https://https://github.com/alexrsanchez/pyClim/issues"
